<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Screens.SignInFragment.SignInFragment">
    <!--
    Here I used relativelayout to enable me to allign the down label,
    and linear layouts s simple as I just wanted to arrange Elements vertically
    and constraint layout to use chains and baseline for the two buttons
    -->
    <RelativeLayout
        android:id="@+id/signInFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primaryColor"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/WelcomeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/large_padding_and_margin"
            android:layout_marginTop="@dimen/large_padding_and_margin"
            android:layout_marginBottom="@dimen/normal_padding_and_margin"
            android:fontFamily="@font/century"
            android:text="@string/welcome_back"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/large_text_size"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/WelcomeTextView"
            android:gravity="start"
            android:orientation="vertical">

            <TextView
                style="@style/label_style"
                android:text="@string/email" />

            <EditText
                android:id="@+id/emailEditText"
                style="@style/edit_text_style"
                android:inputType="textEmailAddress" />

            <TextView
                style="@style/label_style"
                android:text="@string/password" />

            <EditText
                android:id="@+id/passwordEditText"
                style="@style/edit_text_style"
                android:inputType="textPassword" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/normal_padding_and_margin">

                <Button
                    android:id="@+id/loginButton"
                    style="@style/button_style"
                    android:layout_width="0dp"
                    android:layout_marginVertical="@dimen/medium_padding_and_margin"
                    android:text="@string/login"
                    app:layout_constraintBaseline_toBaselineOf="@+id/sign_up_button"
                    app:layout_constraintEnd_toStartOf="@+id/sign_up_button"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/sign_up_button"
                    style="@style/button_style"
                    android:layout_width="0dp"
                    android:text="@string/sign_up"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/loginButton"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/skipTextView"
            style="@style/title_label"
            android:text="@string/app_name" />

    </RelativeLayout>
</layout>
